clean & refactor